# mq-serve

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  package.json  pnpm-lock.yaml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: index.html
frontend/: index.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: QueryBar.tsx  Toolbar.tsx
frontend/src/components/Preview/: Frontmatter.tsx  Toc.tsx  index.tsx
frontend/src/components/Sidebar/: FileGroup.tsx  FileItem.tsx  SearchPanel.tsx  TreeNode.tsx  index.tsx
frontend/src/hooks/: useDropzone.ts  useWebSocket.ts
frontend/src/lib/: markdown.ts  mdx.ts
frontend/src/store/: session.ts
src/: cli.rs  handlers.rs  main.rs  server.rs  session.rs  watcher.rs
